<!--
  ~ Stork
  ~ Copyright (C) 2019 Tigase, Inc. (office@tigase.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, version 3 of the License.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program. Look for COPYING file in the top folder.
  ~ If not, see http://www.gnu.org/licenses/.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Stork IM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="send_file">Send file</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_status">Status</string>
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_auto_away_after_title">Auto Away presence delay</string>
    <string-array name="pref_auto_away_after_labels">
        <item>Off</item>
        <item>30 sec</item>
        <item>45 sec</item>
        <item>60 sec</item>
        <item>90 sec</item>
        <item>120 sec</item>
    </string-array>
    <string-array name="pref_auto_away_after_values">
        <item>-1</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>
    <string-array name="account_mam_sync_labels">
        <item>Never</item>
        <item>Last 12 hours</item>
        <item>Last 24 hours</item>
        <item>Last 3 days</item>
        <item>Last 7 days</item>
        <item>Last 14 days</item>
        <item>Last 365 days</item>
    </string-array>
    <string-array name="account_mam_sync_values">
        <item>0</item>
        <item>12</item>
        <item>24</item>
        <item>72</item>
        <item>168</item>
        <item>336</item>
        <item>8760</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_jid">XMPP ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This XMPP ID is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_host">Hostname (optional)</string>
    <string name="prompt_resource">Resource</string>
    <string name="prompt_nickname">Nickname (optional)</string>

    <string name="about_activity_title">About</string>
    <string name="about_application_name">Stork IM</string>
    <string name="about_version_name">Version %s</string>
    <string name="about_copyright">ⓒ 2011–2019 Tigase Inc.</string>
    <string name="about_rights">All rights reserved.</string>
    <string name="main_menu_roster">Contacts</string>
    <string name="main_menu_openchats">Chats</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_othersection">Other</string>
    <string name="menu_roster_show_offline">Show offline</string>
    <string name="menu_roster_sort">Sort by</string>
    <string name="menu_roster_sort_presence">presence</string>
    <string name="menu_roster_sort_name">name</string>
    <string name="contact_xmppid">XMPP ID</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_add_button">Add</string>
    <string name="menu_roster_delete_contact">Delete</string>
    <string name="roster_delete_contact">Do you want to delete contacts? It cannot be undone.</string>
    <string name="contact_xmppid_invalid">Invalid XMPP ID</string>
    <string name="status_chat">Free for chat</string>
    <string name="status_online">Online</string>
    <string name="status_away">Away</string>
    <string name="status_xa">Extended Away</string>
    <string name="status_dnd">Do Not Disturb</string>
    <string name="status_offline">Offline</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="pref_header_accounts">Accounts</string>
    <string name="account_active">Account active</string>
    <string name="action_update_account">Update</string>
    <string name="notification_certificate_error_title">Certificate error for
        <xliff:g id="account">%s</xliff:g>
    </string>
    <string name="notification_certificate_error_text">Check your server settings</string>
    <string name="notification_credentials_error_title">Invalid password for
        <xliff:g id="account">%s</xliff:g>
    </string>
    <string name="account_certificate_info_chain">\nCertificate chain[<xliff:g id="chain_position">%s</xliff:g>]:\n
    </string>
    <string name="account_certificate_info_subject">Subject: %s\n</string>
    <string name="account_certificate_info_issuer">Issuer: %s\n</string>
    <string name="account_certificate_info_fingerprint_sha">Fingerprint (SHA-1): %s\n</string>
    <string name="account_certificate_info_fingerprint_md5">Fingerprint (MD5): %s\n</string>
    <string name="account_certificate_info_title">Unknown certificate</string>
    <string name="account_certificate_info_description">Server presented unknown certificates. If you are sure that
        certificates are valid, press Accept.\n
    </string>
    <string name="account_certificate_info_button_accept">Accept</string>
    <string name="account_certificate_info_button_reject">Reject</string>
    <string name="menu_chat_archive">Archive chat</string>
    <string name="menu_chat_copytext">Copy text</string>
    <string name="notification_subscription_request_title">Subscription request from %s</string>
    <string name="notification_subscription_request_text">Someone added you to roster.</string>
    <string name="contact_allow_button">Allow</string>
    <string name="contact_reject_button">Reject</string>
    <string name="contact_subscription_info">Someone adds you to his roster and want to see your presence status.
    </string>
    <string name="contact_vcard_fullname">Full name</string>
    <string name="contact_vcard_nickname">Nickname</string>
    <string name="contact_vcard_phone">Phone</string>
    <string name="contact_vcard_work">Work</string>
    <string name="contact_vcard_position">Position</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="join_room_address">Room address</string>
    <string name="join_room_nickname">Nickname</string>
    <string name="main_menu_joinroom">Join chat room</string>
    <string name="title_activity_join_muc">Join chat room</string>
    <string name="title_activity_muc">Room</string>
    <string name="menu_chat_leaveroom">Leave room</string>
    <string name="main_menu_connectionstatus">Connection info</string>
    <string name="menu_connectionstatus_ping">Ping server</string>
    <string name="menu_connectionstatus_ack">ACK</string>
    <string name="pref_auto_x_away_after_title">Auto eXtended Away delay (after Away)</string>
    <string name="pref_chat_notifications_title">Chats</string>
    <string name="pref_muc_notifications_title">Groupchats</string>
    <string name="openchats_room">Room %s</string>
    <string name="openchats_chat">%s</string>
    <string name="notification_new_message_from">New message from %s</string>
    <string name="notification_new_groupmessage_from">New message in room %s</string>
    <string name="notification_new_messages">%s new messages</string>
    <string name="notification_unread_conversations">%s unread conversations</string>
    <string name="pref_accounts_newaccount">Add account</string>
    <string name="action_sign_in_cancel">Cancel</string>

    <string name="login_checking">Checking connection</string>
    <string name="login_connected">Connected to server</string>
    <string name="login_checking_password">Checking password</string>
    <string name="login_password_valid">Password valid</string>
    <string name="login_password_invalid">Password invalid</string>
    <string name="login_successful">Connection successful</string>
    <string name="menu_chat_delete">Delete chat history</string>
    <string name="delete_chat_history_question">Do you want to delete chat history? It cannot be undone.</string>
    <string name="account_status_disconnected">Disconnected</string>
    <string name="account_status_disconnecting">Disconnecting</string>
    <string name="account_status_connecting">Connecting</string>
    <string name="account_status_connected">Connected</string>
    <string name="account_status_disabled">Account disabled</string>
    <string name="account_status_unknown">Unknown account status</string>
    <string name="new_account_login">I have an XMPP account</string>
    <string name="new_account_create">Create new account</string>
    <string name="account_mam_title">Status</string>
    <string name="warning">Warning</string>
    <string name="no_permissions">Aplication has no granted permisions to do that.</string>
    <string name="action_archive_chat">Archive</string>
    <string name="action_delete_chat">Delete</string>
    <string name="action_leave_room">Leave room</string>
    <string name="action_history_copy">Copy</string>
    <string name="action_history_delete">Delete</string>
    <string name="delete_chat_item_question">Do you want to delete messages? It cannot be undone.</string>
    <string name="channel_name">Messages</string>
    <string name="channel_description">Incomming messages</string>
    <string name="menu_connectionstatus_serverfeatures">Server features</string>
    <string name="credits_activity_title">Credits</string>
    <string name="pref_title_display_connection_status">Display connection status</string>
    <string-array name="vcard_avatar_action">
        <item>Take photo</item>
        <item>Pick photo</item>
    </string-array>
</resources>
