<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_roster"
            android:icon="@drawable/ic_menu_roster"
            android:title="@string/main_menu_roster" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_menu_chats"
            android:title="@string/main_menu_openchats" />
    </group>

    <item android:title="@string/main_menu_othersection">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/main_menu_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/main_menu_about" />
        </menu>
    </item>

</menu>
