<?xml version="1.0" encoding="utf-8"?><!--
  ~ Tigase Android Messenger
  ~ Copyright (C) 2019 Tigase, Inc. (office@tigase.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, version 3 of the License.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program. Look for COPYING file in the top folder.
  ~ If not, see http://www.gnu.org/licenses/.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/ac_serach"
          android:icon="@drawable/ic_search"
          android:title="Search"
          app:showAsAction="always"/>
    <item
            android:id="@+id/menu_roster_show_offline"
            android:checkable="true"
            android:orderInCategory="100"
            android:title="@string/menu_roster_show_offline"
            app:showAsAction="never"/>
    <item
            android:id="@+id/menu_roster_sort"
            android:orderInCategory="100"
            android:title="@string/menu_roster_sort"
            app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/menu_roster_sort_presence"
                        android:title="@string/menu_roster_sort_presence"/>
                <item
                        android:id="@+id/menu_roster_sort_name"
                        android:title="@string/menu_roster_sort_name"/>
            </group>
        </menu>
    </item>

</menu>
