<!--
  ~ pref_headers.xml
  ~
  ~ Tigase Android Messenger
  ~ Copyright (C) 2011-2016 "Tigase, Inc." <office@tigase.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program. Look for COPYING file in the top folder.
  ~ If not, see http://www.gnu.org/licenses/.
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
            android:fragment="org.tigase.messenger.phone.pro.settings.SettingsActivity$GeneralPreferenceFragment"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/pref_header_general"/>

    <header
            android:fragment="org.tigase.messenger.phone.pro.settings.SettingsActivity$NotificationPreferenceFragment"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/pref_header_notifications"/>

    <header
            android:fragment="org.tigase.messenger.phone.pro.settings.SettingsActivity$DataSyncPreferenceFragment"
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/pref_header_data_sync"/>
    <header
            android:fragment="org.tigase.messenger.phone.pro.settings.SettingsActivity$AccountsPreferenceFragment"
            android:icon="@drawable/ic_accounts_24dp"
            android:title="@string/pref_header_accounts"/>

</preference-headers>
