<!--
  ~ Stork
  ~ Copyright (C) 2019 Tigase, Inc. (office@tigase.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, version 3 of the License.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program. Look for COPYING file in the top folder.
  ~ If not, see http://www.gnu.org/licenses/.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/pref_chat_notifications_title"
            android:key="pref_chat_notification_settings">

        <!-- A 'parent' preference, which enables/disables child preferences (below)
             when checked/unchecked. -->
        <SwitchPreference
                android:defaultValue="true"
                android:key="notifications_new_message"
                android:title="@string/pref_title_new_message_notifications"/>

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
                android:defaultValue="content://settings/system/notification_sound"
                android:dependency="notifications_new_message"
                android:key="notifications_new_message_ringtone"
                android:ringtoneType="notification"
                android:title="@string/pref_title_ringtone"/>

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
                android:defaultValue="true"
                android:dependency="notifications_new_message"
                android:key="notifications_new_message_vibrate"
                android:title="@string/pref_title_vibrate"/>

    </PreferenceCategory>


    <PreferenceCategory
            android:title="@string/pref_muc_notifications_title"
            android:key="pref_muc_notification_settings">

        <SwitchPreference
                android:defaultValue="true"
                android:key="notifications_new_groupmessage"
                android:title="@string/pref_title_new_message_notifications"/>

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
                android:defaultValue="content://settings/system/notification_sound"
                android:dependency="notifications_new_groupmessage"
                android:key="notifications_new_groupmessage_ringtone"
                android:ringtoneType="notification"
                android:title="@string/pref_title_ringtone"/>

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
                android:defaultValue="true"
                android:dependency="notifications_new_groupmessage"
                android:key="notifications_new_groupmessage_vibrate"
                android:title="@string/pref_title_vibrate"/>

    </PreferenceCategory>
</PreferenceScreen>
